Added recommendations section